fix: alterar palavra da resposta

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   const resposta = document.getElementById('resposta')
 
   document.getElementById('enviar').addEventListener('click', () => {
-    if (resposta.value.trim() === 'Estou prestes a morrer') {
+    if (resposta.value.trim() === 'Estou prestes a renascer') {
       window.location.href = 'resposta.html'
     } else {
       window.location.href = 'error.html'
